...
          <BlueCard style={styles.section} testID="BitAssetsSyncError">
            <BlueText selectable>{syncError}</BlueText>
          </BlueCard>
        ) : null}

        <View style={styles.toolsButton}>
          <Button testID="BitAssetsToolsButton" title="Tools" onPress={() => navigation.navigate('BitAssetsTools', { walletID })} />
        </View>
      </ScrollView>

      <FContainer ref={walletActionButtonsRef}>
        <FButton
          testID="ReceiveButton"
...
